# High-performance-Network-Design

./: README.md
2.1网络编程/2.1.1网络io与select,poll,epoll/: CMakeLists.txt  README.md  tcpserver  tcpserver.c  tcpserver_HW  tcpserver_HW.c
2.1网络编程/2.1.1网络io与select,poll,epoll/src/example/: tcpserver.c
2.1网络编程/2.1.1网络io与select,poll,epoll/src/practice/: tcpserver_HW.c
2.1网络编程/2.1.2 reator原理与实现/: CMakeLists.txt  README.md  reactor_singlecb  reactor_singlecb.c  reactor_singlecb_hw  reactor_singlecb_hw.c
2.1网络编程/2.1.2 reator原理与实现/src/practice/: reactor_singlecb_hw.c
2.1网络编程/2.1.3 http-https服务器实现/: reactor_singlecb.c
2.1网络编程/2.1.3 服务器百万并发实现/: CMakeLists.txt  README.md  mul_port_client_epoll  mul_port_client_epoll.c  reactor  reactor_hw  reactor_mulcb.c  reactor_singlecb_hw_C1000K.c  reactor_singlecb_课上手写版本.c
2.1网络编程/2.1.3 服务器百万并发实现/1.picture/: mindmap.km
2.1网络编程/2.1.3 服务器百万并发实现/src/example/: mul_port_client_epoll.c  reactor_mulcb.c  reactor_singlecb.c
2.1网络编程/2.1.3 服务器百万并发实现/src/practice/: reactor_mulcb_hw.c  reactor_singlecb_hw_C1000K.c
2.1网络编程/2.1.4 http服务器实现/: CMakeLists.txt  README.md  webserver  webserver.c  webserver_hw
2.1网络编程/2.1.4 http服务器实现/html/: http
2.1网络编程/2.1.4 http服务器实现/src/practice/: webserver_hw.c
2.2网络原理/2.2.1 websocket协议与服务器实现/: CMakeLists.txt  README.md  webserver.c  websocket.html  websocket_server  websocket_server.c  websocket_server_v1.c
2.2网络原理/2.2.1 websocket协议与服务器实现/html/: websocket.html
2.2网络原理/2.2.1 websocket协议与服务器实现/src/example/: websocket_server.c  websocket_server_v1.c
2.2网络原理/2.2.1 websocket协议与服务器实现/src/practice/: websocket_server_hw.c
2.2网络原理/2.2.2 redis，memcached，ngix网络组件/reactor/: main.c  rbt-timer.h  reactor.h  ringbuf.h
2.2网络原理/2.2.2 redis，memcached，ngix网络组件/src/reactor/: rbt-timer.h  rbtree.h  reactor.h
2.2网络原理/2.2.3 POSIX API与网络协议栈/: README.md
2.2网络原理/2.2.4 UPD的可靠传输协议QUIC/kcp-20211120/: delay.c  delay.h  ikcp.c  ikcp.h  server.c  test.h
2.2网络原理/2.2.4 UPD的可靠传输协议QUIC/src/kcp-20211120/: CMakeLists.txt  client.c
2.2网络原理/2.2.4 UPD的可靠传输协议QUIC/src/kcp_hw/: CMakeLists.txt
2.2网络原理/2.2.4 UPD的可靠传输协议QUIC/src/kcp_hw/client/: CMakeLists.txt  client.c
2.2网络原理/2.2.4 UPD的可靠传输协议QUIC/src/kcp_hw/delay/: CMakeLists.txt  delay.c  delay.h
2.2网络原理/2.2.4 UPD的可靠传输协议QUIC/src/kcp_hw/kcp/: CMakeLists.txt
2.2网络原理/2.2.4 UPD的可靠传输协议QUIC/src/kcp_hw/server/: CMakeLists.txt  server.c  server.h
2.2网络原理/2.2.4 UPD的可靠传输协议QUIC/src/kcp_hw/test/: CMakeLists.txt  kcp_test.cpp  test.cpp
2.2网络原理/2.2.4 UPD的可靠传输协议QUIC/src/practice/kcp/: ikcp.c  ikcp.h
2.3协程框架Ntyco的实现/2.3.1协程设计原理与汇编实现/2.doc/: 伪代码.txt
2.3协程框架Ntyco的实现/2.3.2协程调度器实现与性能测试/2.doc/: Untitled-1.txt
2.3协程框架Ntyco的实现/2.3.2协程调度器实现与性能测试/src/NtyCo/: Makefile
2.3协程框架Ntyco的实现/2.3.2协程调度器实现与性能测试/src/NtyCo/core/: nty_coroutine.c  nty_coroutine.h  nty_socket.c
2.3协程框架Ntyco的实现/2.3.2协程调度器实现与性能测试/src/NtyCo/sample/: nty_http_server_mulcore.c  nty_mysql_client.c  nty_mysql_oper.c
2.4用户态协议栈NtyTcp的实现/2.4.1 协议栈之tcpip设计/src/: icmp_arp_udp_success.c  net_family_课上手写版本.c
2.5网络编程实践/: README.md
2.5网络编程实践/hewei-practice/01.ttcp/: common.h
2.5网络编程实践/muduo-examples-in-go-master/: LICENSE  README.md
2.5网络编程实践/muduo-examples-in-go-master/examples/ace/ttcp/: ttcp.go
2.5网络编程实践/muduo-examples-in-go-master/examples/asio/chat/: server.go
2.5网络编程实践/muduo-examples-in-go-master/examples/asio/chat/asio_chat_server/: main.go
2.5网络编程实践/muduo-examples-in-go-master/examples/simple/: chargen.go  common.go  daytime.go  discard.go  echo.go  time.go
2.5网络编程实践/muduo-examples-in-go-master/examples/simple/simple_allinone/: main.go
2.5网络编程实践/muduo-examples-in-go-master/examples/simple/simple_chargen/: main.go
2.5网络编程实践/muduo-examples-in-go-master/examples/simple/simple_chargenclient/: main.go
2.5网络编程实践/muduo-examples-in-go-master/examples/simple/simple_daytime/: main.go
2.5网络编程实践/muduo-examples-in-go-master/examples/simple/simple_discard/: main.go
2.5网络编程实践/muduo-examples-in-go-master/examples/simple/simple_echo/: main.go
2.5网络编程实践/muduo-examples-in-go-master/examples/simple/simple_time/: main.go
2.5网络编程实践/muduo-examples-in-go-master/examples/simple/simple_timeclient/: main.go
2.5网络编程实践/muduo-examples-in-go-master/muduo/: common.go
2.5网络编程实践/muduo-master/examples/ace/ttcp/: ttcp.cc  ttcp_blocking.cc
2.5网络编程实践/recipes-master/esort/: sort00.cc
2.5网络编程实践/recipes-master/faketcp/: discardall.cc  echoall.cc
2.5网络编程实践/recipes-master/tpc/: ttcp.cc
用户态协议栈NtyTcp的实现/: README.md
